<resources>
    <string name="app_name">SapientiaQRCode</string>
    <string name="title_activity_login">Bejelentkezés</string>
    <string name="title_activity_register">Regisztráció</string>
    <string name="title_activity_subject">Tárgy választás</string>
    <string name="title_activity_my_subjects">Saját tárgyaim</string>
    <string name="scan">Beolvasás</string>
    <string name="no_subjects">Nincsenek felvehető tárgyak.</string>
    <string name="no_my_subjects">Nincsenek saját tárgyak.</string>
    <string name="my_subjects">Saját tárgyaim</string>
    <string name="login">Bejelentkezés</string>
    <string name="register">Regisztráció</string>
    <string name="logout">Kijelentkezés</string>
    <string name="presence">Jelenlét: </string>
    <string name="not_registrated">Még nem regisztrált?</string>
    <string name="remember_me">Emlékezz rám</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="add_subject">Új tárgy hozzáadása</string>
    <string name="add_subject_title">Biztosan szeretné hozzáadni a következő tárgyat?</string>
    <string name="add_subject_message">hozzáadása.</string>
    <string name="main_page">Regisztráljon vagy jelentkezzen be!!!</string>
    <string name="yes">Igen</string>
    <string name="no">Nem</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_first_name">Keresztnév</string>
    <string name="prompt_middle_name">Középsőnév</string>
    <string name="prompt_last_name">Családnév</string>
    <string name="prompt_neptun_code">Neptun kód</string>
    <string name="prompt_password">Jelszó</string>
    <string name="prompt_confirm_password">Jelszó újra</string>
    <string name="action_sign_in">Bejelentkezés</string>
    <string name="action_register">Regisztárció</string>
    <string name="action_sign_in_short">Bejelentkezés</string>
    <string name="error_invalid_email">Az email cím nem valódi</string>
    <string name="error_invalid_password">A jelszó túl rövid</string>
    <string name="error_password_match">A jelszavak nem egyeznek</string>
    <string name="error_invalid_neptun_code">A neptunkód túl rövid</string>
    <string name="error_incorrect_password">A jelszó helytelen</string>
    <string name="error_field_required">Ez a mező kötelező</string>
    <string name="error_registration">Hiba a regisztrációban</string>
    <string name="error_login">Hiba a bejelentkezésben</string>
    <string name="error_my_subjects">Hiba a saját tárgyaim lekérésében</string>
    <string name="error_subjects">Hiba a tárgyak lekérésében</string>
    <string name="error_attend_subject">Hiba a tárgyfelvételben</string>
    <string name="error_token">Jelentkezz ki</string>
    <string name="error_in_link">Rossz link</string>
    <string name="success">Sikeres</string>
</resources>
