<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:id="@+id/login"
              android:title="@string/login" />
        <item android:id="@+id/register"
              android:title="@string/register" />
        <item android:id="@+id/logout"
              android:title="@string/logout" />
    </group>

    <group android:id="@+id/group_menu">
        <item android:id="@+id/qr_code"
              android:icon="@drawable/ic_qr_code_32"
              android:title="@string/scan" />
        <item android:id="@+id/my_subject"
              android:icon="@drawable/ic_list_32_black"
              android:title="@string/my_subjects" />
        <item android:id="@+id/subject"
              android:icon="@drawable/ic_add_32_black"
              android:title="@string/add_subject" />
    </group>
</menu>